--- a/pom.xml
+++ b/pom.xml
@@ -51,13 +51,13 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.16</version>
+			<version>8.0.19</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>2.0.1</version>
+			<version>2.1.2</version>
 		</dependency>
 
 		<dependency>
@@ -113,27 +113,28 @@
 			<artifactId>spring-boot-starter-quartz</artifactId>
 		</dependency>
 
-		<!--分布式多线程-->
+		<!-- 分布式多线程 -->
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 			<version>2.3.2</version>
 		</dependency>
 
+		<!-- 云服务器 -->
 		<dependency>
 			<groupId>com.qiniu</groupId>
 			<artifactId>qiniu-java-sdk</artifactId>
 			<version>7.2.28</version>
 		</dependency>
 
-		<!--本地缓存-->
+		<!-- 本地缓存 -->
 		<dependency>
 			<groupId>com.github.ben-manes.caffeine</groupId>
 			<artifactId>caffeine</artifactId>
 			<version>2.8.1</version>
 		</dependency>
 
-		<!--项目监控-->
+		<!-- 项目监控 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
