--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,12 +10,12 @@ spring.thymeleaf.cache=false
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
-spring.datasource.username=root
-spring.datasource.password=root123456
+spring.datasource.username=
+spring.datasource.password=
 # 云服务器
 #spring.datasource.url=jdbc:mysql://47.102.87.192:3306/
-#spring.datasource.username=root
-#spring.datasource.password=Qwer_123
+#spring.datasource.username=
+#spring.datasource.password=
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
@@ -30,8 +30,8 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 # Mail
 spring.mail.host=smtp.qq.com
-spring.mail.username=825350026@qq.com
-spring.mail.password=cvxptybxmnxlbedb
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -67,8 +67,8 @@ wk.image.command=/usr/local/bin/wkhtmltoimage
 wk.image.storage=/Users/wangjie/data/wk-images
 
 # qiniu
-qiniu.key.access=t1oLJWJ8oO6lLzkFRn9rWxU0cPQz_Tm6UgnA63dW
-qiniu.key.secret=1hrnoT4_Izl3R9ySC-c5t5n_8KkL5BQYoF8lmwN1
+qiniu.key.access=
+qiniu.key.secret=
 qiniu.bucket.header.name=wj-header
 qiniu.bucket.header.url=http://q9dyw1d3j.bkt.clouddn.com
 qiniu.bucket.share.name=wj-share
