--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,5 @@
 server.port=8080
-server.servlet.context-path=
-# /community
+server.servlet.context-path=/community
 
 community.path.domain=http://47.102.87.192
 community.path.upload=/tmp/uploads
@@ -11,8 +10,8 @@ spring.thymeleaf.cache=true
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
-spring.datasource.username=root
-spring.datasource.password=root123456
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
@@ -27,8 +26,8 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 # Mail
 spring.mail.host=smtp.qq.com
-spring.mail.username=825350026@qq.com
-spring.mail.password=wryylgfzollgbeda
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -64,8 +63,8 @@ wk.image.command=/opt/wkhtmltoimage.sh
 wk.image.storage=/tmp/wk-images
 
 # qiniu
-qiniu.key.access=t1oLJWJ8oO6lLzkFRn9rWxU0cPQz_Tm6UgnA63dW
-qiniu.key.secret=1hrnoT4_Izl3R9ySC-c5t5n_8KkL5BQYoF8lmwN1
+qiniu.key.access=
+qiniu.key.secret=
 qiniu.bucket.header.name=wj-header
 qiniu.bucket.header.url=http://q9dyw1d3j.bkt.clouddn.com
 qiniu.bucket.share.name=wj-share
